Corregir generacion de reportes Word: agregar numeracion correlativa y tipo de dispositivo
- Agregar campo 'numero' con numeracion correlativa automatica (1,2,3,4...)
- Incluir campo 'type' desde deviceCatalog.type en todas las funciones de generacion
- Remover seccion 'Subir Reporte' del sidebar para roles colaborador
- Corregir estructura JSX en Dashboard.tsx
- Limpiar referencias no utilizadas de SubirReporte
- Mantener funcionalidad de modal intacta
- Optimizar imagen base64 con prefijo automatico

--- a/apps/client/index.html
+++ b/apps/client/index.html
@@ -1,13 +1,18 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" href="./src/assets/Rowan_Icon.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rowan Reports</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" href="./src/assets/Rowan_Icon.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Rowan Networks | Reportes</title>
+  <!-- Font Awesome para iconos -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
